samples/_failures_safe/1761266171_b0cc9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc08d23b.c: In function ‘main’:
./samples/SAFE/__tmp_cc08d23b.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
